<resources>
    <string name="app_name">Adidas mPOS (Prototype)</string>
    <string name="sales">Sales</string>
    <string name="backOfHouse">Back of House</string>
    <string name="clients">Clients</string>
    <string name="storeNumber">Store #5775</string>
    <string name="registerNumber">Register #001</string>
    <string name="transaction">Example Transaction</string>
    <string name="reports">Reports</string>
    <string name="giftCardBalance">Gift Card Balance</string>
    <string name="admin">Admin</string>
    <string name="clientList">Client List</string>
    <string name="tasks">Tasks</string>
    <string name="messages">Messages</string>
    <string name="inventory">Inventory</string>
    <string name="shipment">Shipment</string>
    <string name="Transfers">Transfers</string>
    <string name="Reports">Reports</string>
    <string name="your_string"><u>Underlined text</u></string>
</resources>
