<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu.BOHActivity">

    <Button
        android:id="@+id/inventory"
        android:layout_width="166dp"
        android:layout_height="53dp"
        android:text="@string/inventory"
        app:layout_constraintBottom_toTopOf="@+id/shipment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backOfHouse" />

    <Button
        android:id="@+id/shipment"
        android:layout_width="166dp"
        android:layout_height="53dp"
        android:text="@string/shipment"
        app:layout_constraintBottom_toTopOf="@+id/transfers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inventory" />

    <Button
        android:id="@+id/transfers"
        android:layout_width="166dp"
        android:layout_height="53dp"
        android:text="@string/Transfers"
        app:layout_constraintBottom_toTopOf="@+id/reports"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shipment" />

    <Button
        android:id="@+id/reports"
        android:layout_width="166dp"
        android:layout_height="53dp"
        android:text="@string/reports"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transfers" />

    <TextView
        android:id="@+id/backOfHouse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:lineSpacingExtra="36sp"
        android:text="@string/backOfHouse"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.015" />
</android.support.constraint.ConstraintLayout>